ASPNetMicroserviceTemplate/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # Имя сервиса
  name: aspnetmicroservicetemplate
spec:
  # Количество реплик сервиса 
  replicas: 1
  selector:
    matchLabels:
      pod: aspnetmicroservicetemplate
  template:
    metadata:
      labels:
        pod: aspnetmicroservicetemplate
    spec:
      containers:
        # Имя контейнера
      - name: aspnetmicroservicetemplate-container
        # Адрес образа
        image: docker.io/vegiwoo/aspnetmicroservicetemplate:1.0.1
        # imagePullSecrets:
        # - name: regcred
        ports:
        - containerPort: 8081
