ASPNetMicroserviceTemplate/somemodels-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnetmicroservicetemplate
  labels:
    app: aspnetmicroservicetemplate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aspnetmicroservicetemplate
  template:
    metadata:
      labels:
        app: aspnetmicroservicetemplate
    spec:
      containers:
      - name: aspnetmicroservicetemplate
        image: vegiwoo/aspnetmicroservicetemplate:0.0.12
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: aspnetmicroservicetemplate
spec:
  type: LoadBalancer
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    app: aspnetmicroservicetemplate
