ASPNetMicroserviceTemplate/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspnetmicroservice-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: repack.pw
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aspnetmicroservice-service
            port:
              number: 80
